# g_test000

./: .gitignore  .recent_dbs.txt  CMakeLists.txt  README.md  imgui.ini  платежки 2024г.tsv
src/: Contract.h  Counterparty.h  CustomWidgets.cpp  CustomWidgets.h  DatabaseManager.cpp  DatabaseManager.h  IconsFontAwesome6.h  ImportManager.cpp  ImportManager.h  Invoice.h  Kosgu.h  Payment.h  PdfReporter.cpp  PdfReporter.h  Settings.h  UIManager.cpp  UIManager.h  main.cpp
src/views/: BaseView.h  ContractsView.cpp  ContractsView.h  CounterpartiesView.cpp  CounterpartiesView.h  ImportMapView.cpp  ImportMapView.h  InvoicesView.cpp  InvoicesView.h  KosguView.cpp  KosguView.h  PaymentsView.cpp  PaymentsView.h  RegexesView.cpp  RegexesView.h  SettingsView.cpp  SettingsView.h  SqlQueryView.cpp  SqlQueryView.h
